# reconnV2

./: .aiderignore  .coverage  .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES_PLAN.md  AGENTS.md  BENCHMARK_ROADMAP.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  FINAL_REPORT.md  IMPROVEMENT_PLAN.md  Makefile  README.md  ROADMAP.md  ROADMAP_ELITE.md  ROADMAP_FINAL.md  api  cheatsheet.sh  ci_example.md  command.md  commands2.md  debug_doctor.py  debug_doctor2.py  docker-compose.yml  fix_tool.md  gui.sh  install.sh  installation.md  novnc.sh  objective.md  objectiveV2.md  print_exc.py  projects.json  psutil.py  pyproject.toml  quick-scan.sh  recon.sh  (+8 more)
.github/workflows/: ci.yml  quality-gates.yml
artifacts/: last-trace-events.jsonl  last-trace.json
config/: default.yaml  profiles.json  schema.json  telegram.json
data/: accounts.json  favicons.json  projects.json  recon.db
docs/: API.md  ARCHITECTURE.md  CLI.md  PLUGINS.md
engaements/: ‏‏‏‏target1.txt  ‏‏‏‏target4.txt  ‏‏‏‏target5.txt
engagements/: target3_clean.txt  ‏‏target2.txt  ‏‏‏‏target3.txt  ‏‏‏‏target6.txt
jobs/: last
recon_cli/: __init__.py  api.py  cli.py  cli_wizard.py  completions.py  config.py  exceptions.py  inventory.py  metrics.py  plugins.py  projects.py  rules.py  scheduler.py  settings.py  users.py
recon_cli/active/: __init__.py  modules.py
recon_cli/api/: __init__.py  app.py
recon_cli/commands/: config.py  db.py  doctor.py  jobs.py  reports.py  scan.py  trace.py  utils.py  worker.py
recon_cli/correlation/: __init__.py  graph.py
recon_cli/crawl/: __init__.py  runtime.py
recon_cli/db/: __init__.py  models.py  schemas.py  storage.py
recon_cli/engine/: executor.py  hypothesis.py  judge.py  nuclei_engine.py  planner.py
recon_cli/jobs/: __init__.py  lifecycle.py  manager.py  models.py  results.py  streaming.py  summary.py  validator.py
recon_cli/learning/: __init__.py  collector.py  model.py
recon_cli/pipeline/: __init__.py  context.py  feature_defs.py  parallel.py  progress.py  runner.py  stage_active_auth.py  stage_active_intel.py  stage_advanced_idor.py  stage_api_logic_fuzzer.py  stage_api_recon.py  stage_api_reconstructor.py  stage_api_schema_probe.py  stage_auth_bypass_tech.py  stage_auth_bypass_validator.py  stage_auth_discovery.py  stage_auth_matrix.py  stage_base.py  stage_cache_vuln.py  stage_cloud_assets.py  stage_cloud_looter.py  stage_cms_scan.py  stage_correlation.py  stage_ct_asn.py  stage_decision_engine.py  stage_dedupe.py  stage_enrichment.py  stage_exploit_validation.py  stage_extended_validation.py  stage_favicon_recon.py  stage_fuzz.py  stage_github_recon.py  stage_graphql.py  stage_graphql_exploit.py  stage_headless_crawl.py  stage_host_injection.py  stage_html_forms.py  stage_http_probe.py  stage_http_smuggling.py  stage_idor.py  (+44 more)
recon_cli/pipeline/stages/: __init__.py
recon_cli/pipeline/stages/auth/: stage_active_auth.py  (+6 more)
recon_cli/plugins/: __init__.py
recon_cli/reports/: __init__.py  executive.py  generator.py  templates.py
recon_cli/scanners/: __init__.py  advanced.py  integrations.py
recon_cli/secrets/: __init__.py  async_scanner.py  detector.py
recon_cli/takeover/: __init__.py  detector.py
recon_cli/tools/: __init__.py  executor.py
recon_cli/utils/: __init__.py  alerting.py  async_dns.py  async_http.py  auth.py  benchmark_harness.py  cache.py  captcha.py  circuit_breaker.py  config_migrate.py  diff.py  enrich.py  error_aggregator.py  error_recovery.py  error_taxonomy.py  event_bus.py  favicon.py  fs.py  grpc_fuzzer.py  h2_smuggling.py  health.py  json_schema.py  jsonl.py  last_run.py  logging.py  memory.py  metrics.py  notify.py  oast.py  pdf_reporter.py  performance.py  pipeline_trace.py  proto_probes.py  quic_probe.py  race_burst.py  rate_limiter.py  raw_http.py  reporter.py  reporting.py  sanitizer.py  (+8 more)
recon_cli/web/: __init__.py  app.py  charts.py  search.py  websocket.py
recon_cli/web/templates/: index.html  job_detail.html  scan.html  settings.html
reports/: last
scripts/: fix_indentation.py  repro_validation.py  run_benchmarks.py
tests/: conftest.py  test_active_and_scanners.py  test_alerting.py  test_api.py  test_async_http.py  test_auth_bypass_validator_stage.py  test_auth_flow.py  test_autonomous_engine.py  test_business_logic_stages.py  test_cache.py  test_captcha_bypass.py  test_circuit_breaker.py  test_cli_coverage.py  test_cli_regressions.py  test_cms_scan_tools.py  test_coverage_boost.py  test_coverage_boost_v10.py  test_coverage_boost_v2.py  test_coverage_boost_v3.py  test_coverage_boost_v5.py  test_coverage_boost_v6.py  test_coverage_boost_v7.py  test_coverage_boost_v8.py  test_coverage_boost_v9.py  test_coverage_final_push.py  test_coverage_nuke.py  test_elite_features.py  test_error_taxonomy.py  test_executor_policies.py  test_executor_sessions.py  test_executor_timeout.py  test_failure_modes.py  test_grpc_reflection.py  test_health.py  test_host_injection.py  test_http_smuggling_stage.py  test_idor_validator_stage.py  test_job_manager_security.py  test_job_validator.py  test_jwt_vuln_stage.py  (+47 more)
tests/integration/: __init__.py  test_api.py  test_full_pipeline.py
tests/mocks/: __init__.py  database.py  http.py  tools.py
tests/smoke/: test_smoke_pipeline.py
vuln_cors_lightstreamer/: exploit.html  poc.html  test_cors.sh
vuln_origin_ip/: config_leak_attempt.txt  ssl_ciphers.txt  tcp_scan.txt  telemetry_probe.txt  udp_vpn_scan.txt
(+73 files in other folders)
