[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-cli"
version = "0.1.0"
description = "Deterministic recon pipeline orchestrator CLI"
authors = [{ name = "Recon Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9,<1.0",
  "rich>=13.0,<14.0",
  "requests>=2.31,<3.0",
  "numpy>=1.24,<2.0",
  "scikit-learn>=1.4,<2.0"
]

[project.scripts]
recon-cli = "recon_cli.cli:app"

[tool.typer.codegen]
package = "recon_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['recon_cli*']
exclude = ['jobs*', 'archive*', 'artifacts*', 'jobs', 'archive']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
  "smoke: smoke-test marker for pipeline E2E run",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
addopts = [
  "-v",
  "--tb=short",
  "-ra",
  "--strict-markers",
]

[tool.coverage.run]
source = ["recon_cli"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
  "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@abstractmethod",
  "pass",
]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

