[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-cli"
version = "0.2.0"
description = "Deterministic recon pipeline orchestrator CLI with async support, observability, and multi-user management"
authors = [{ name = "Recon Team" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["security", "reconnaissance", "scanning", "vulnerability", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.9,<1.0",
  "rich>=13.0,<14.0",
  "requests>=2.31,<3.0",
  "numpy>=1.24,<2.0",
  "scikit-learn>=1.4,<2.0",
  "aiohttp>=3.9,<4.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "pyyaml>=6.0,<7.0",
  "aiodns>=3.0,<4.0",
  "croniter>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8.0",
  "pytest-asyncio>=0.21,<1.0",
  "pytest-cov>=4.1,<5.0",
  "pytest-mock>=3.12,<4.0",
  "aiosqlite>=0.19,<1.0",
  "httpx>=0.25,<1.0",
  "ruff>=0.1,<1.0",
  "mypy>=1.7,<2.0",
]
api = [
  "fastapi>=0.104,<1.0",
  "uvicorn[standard]>=0.24,<1.0",
]
all = [
  "recon-cli[dev,api]",
]

[project.scripts]
recon-cli = "recon_cli.cli:main"
recon = "recon_cli.cli:main"
reconn = "recon_cli.cli:main"

[tool.typer.codegen]
package = "recon_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['recon_cli*']
exclude = ['jobs*', 'archive*', 'artifacts*', 'jobs', 'archive']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
  "smoke: smoke-test marker for pipeline E2E run",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
addopts = [
  "-v",
  "--tb=short",
  "-ra",
  "--strict-markers",
]

[tool.coverage.run]
source = ["recon_cli"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
  "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@abstractmethod",
  "pass",
]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
